# tke-ai-playbook

./: CodeOfConduct.md  CodeOfConduct_zh.md  Contributing.md  Contributing_zh.md  README.md  README_zh.md  llmbench-vllm.yaml  llmbench.yaml
dockerfiles/kueue-cq-manager/: Dockerfile  pod.yaml  rbac.yaml
dockerfiles/llm-downloader/: Dockerfile  README.md  download.py  pyproject.toml
dockerfiles/llmbench/: Dockerfile  README.md  run-benchmark.sh
dockerfiles/offline-demo/: .dockerignore  Dockerfile  cos_kafka.py  pyproject.toml  utils.py
examples/agent/: langgraph-agent.py  math_server.py  requirements.txt
examples/crane/: README_zh.md  check-nodes-gpu-packing-rate.sh  cranecontroller-svcmonitor.yaml  placementpolicy-gpu-most.yaml  step1-prepare-gpu-allocate-pp-demo.sh  step2-scaleup-and-check-schedule-result.sh  step3-scaledown-and-check-schedule-result.sh  test-gpu-pod-deploy.yaml
examples/offline-demo/: README_zh.md  deploy.sh
helm-charts/autoscaler-stack/: Chart.yaml  README.md  README_zh.md  values.yaml
helm-charts/benchmark/: README.md  README_zh.md
helm-charts/deepseek-r1-dynamo-vllm-pd/: Chart.yaml  values.yaml
helm-charts/deepseek-r1-lws/: Chart.yaml  Dockerfile  perf_deepseek-r1.md  perf_deepseek-r1_pr1333.md  perf_deepseek-r1_vllm-baseline_tp16_dp1.md  perf_deepseek-r1_vllm-baseline_tp16_dp2.md  values-vllm.yaml  values.yaml
helm-charts/deepseek-r1-raycluster/: Chart.yaml  values.yaml
helm-charts/deepseek-r1-vllm/: Chart.yaml  values.yaml
helm-charts/dynamo-disagg/: Chart.yaml  (+10 more)
scripts/: test-openai-api.sh  tke-llm-downloader.sh  utils.sh
(+156 files in other folders)
